--- a/frontend/src/styles/Home.css
+++ b/frontend/src/styles/Home.css
@@ -125,7 +125,28 @@
   }
 
   
-
+  .r-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+  }
+  
+  .r-button button {
+    background: linear-gradient(45deg, #db42dd, #ad1cf0); /* Purple gradient */
+    color: white;
+    cursor: pointer;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    transition: all 0.3s ease; /* Smooth transition for hover effect */
+  }
+  
+  .r-button button:hover {
+    background: linear-gradient(45deg, #db42dd, #ad1cf0); /* Change gradient on hover */
+    transform: scale(1.10); /* Slightly enlarge the button on hover */
+  }
+  
+  
 
   
   
